--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "eternavaultx": "file:",
     "framer-motion": "^10.16.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^7.3.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
